# dtkbluetooth

./: CMakeLists.txt
debian/: changelog  control
docs/: CMakeLists.txt
examples/: CMakeLists.txt  demo.cpp
include/: dadapter.h  dbluetoothadapter.h  dbluetoothagent.h  dbluetoothdevice.h  dbluetoothdeviceinfo.h  dbluetoothmanager.h  dbluetoothobexagent.h  dbluetoothobexmanager.h  dbluetoothobexsession.h  dbluetoothobextransfer.h  dbluetoothtypes.h  ddevice.h  demo.h  dmanager.h  dobexmanager.h  dobexsession.h  dobextransfer.h  dtkbluetooth_global.h  dtkbluetoothtypes.h  namespace.h
misc/: DtkBluetoothConfig.cmake.in
src/: CMakeLists.txt  dadapter_p.h  dadpter.cpp  dbluetoothadapter.cpp  dbluetoothadapter_p.h  dbluetoothadpter.cpp  dbluetoothagent.cpp  dbluetoothagentadaptor.cpp  dbluetoothdbustypes.h  dbluetoothdevice.cpp  dbluetoothdevice_p.h  dbluetoothdeviceinfo.cpp  dbluetoothdvice.cpp  dbluetoothmanager.cpp  dbluetoothmanager_p.h  dbluetoothobexmanager.cpp  dbluetoothobexmanager_p.h  dbluetoothobexsession.cpp  dbluetoothobexsession_p.h  dbluetoothobextransfer.cpp  dbluetoothobextransfer_p.h  dbluetoothutils.h  ddevice_p.h  ddvice.cpp  demo.cpp  dmanager.cpp  dmanager_p.h  dobexmanager.cpp  dobexmanager_p.h  dobexsession.cpp  dobexsession_p.h  dobextransfer.cpp  dobextransfer_p.h  dtkbluetoothdbustypes.h  dtkbluetoothutils.h
src/DBus/: btdispatcher.cpp  btdispatcher.h  btobexdispatcher.cpp  btobexdispatcher.h  dadapterinterface.cpp  dadapterinterface.h  dagentmanagerinterface.cpp  dagentmanagerinterface.h  dbussignaldispatcher.h  ddeviceinterface.cpp  ddeviceinterface.h  dobexagentmanagerinterface.cpp  dobexagentmanagerinterface.h  dobexobjectpushinterface.cpp  dobexobjectpushinterface.h  dobexsessioninterface.cpp  dobexsessioninterface.h  dobextransferinterface.cpp  dobextransferinterface.h  dobjectmanagerinterface.cpp  dobjectmanagerinterface.h
tests/: CMakeLists.txt  ut-demo.cpp
tests/fakeDBus/: adapterservice.h  demoservice.cpp  demoservice.h  deviceservice.h  obexsessionservice.h  obextransferservice.h
